# app/Http/Controllers/API/CategoryController.php
@@ -10,6 +10,7 @@ use App\Products;
 use App\Services\Arr\ArrayServiceInterface;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Cache;
+use Illuminate\Support\Facades\DB;
 
 class CategoryController extends Controller implements CategoryInterface
 {
@@ -25,18 +26,72 @@ class CategoryController extends Controller implements CategoryInterface
         $this->arrayService = $arrayService;
     }
 
+    /**
+     * @OA\Get(
+     *      path="/category/{id}",
+     *      operationId="getCategories",
+     *      tags={"Category"},
+     *      summary="Get list of categories",
+     *      description="Returns list of categories",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Category id,if id = 0, then it is needed for the search,if id > 0 its for categories",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer",
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *         name="br",
+     *         in="query",
+     *         description="brands,example ?br=1,2,3,4 ",
+     *      ),
+     *      @OA\Parameter(
+     *         name="o",
+     *         in="query",
+     *         description="parameters (pr-in|pr-de), it means that it sorts products by price increase, if pr-de, then vice versa by decrease",
+     *      ),
+     *     @OA\Parameter(
+     *         name="s",
+     *         in="query",
+     *         description="parameters (new|old) if (new) sorts by novelty and if (old) by old age",
+     *      ),
+     *     @OA\Parameter(
+     *         name="min",
+     *         in="query",
+     *         description="min price,example ?min=123",
+     *      ),
+     *     @OA\Parameter(
+     *         name="max",
+     *         in="query",
+     *         description="max price,example ?max=5000",
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *       ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Category not found",
+     *      )
+     *     )
+     */
+
+
     public function index(Request $request,$id = 0): \Illuminate\Http\JsonResponse
     {
         if($id != 0) {
-            $a = preg_replace('/\D+/', '', $id);
             $seconds = 14400;
-            $subbrands = Cache::remember('subbrands', $seconds, function () {
-                return $this->brand->select(['id','name','category_id','categories'])->get();
-            });
-            $brands = $this->arrayService->makeBrandArray($subbrands,$a);
+            $subbrands =  $this->brand->select(['id','name','category_id','categories'])->get();
+            $brands = $this->arrayService->makeBrandArray($subbrands,preg_replace('/\D+/', '', $id));
             $builder = $this->product->withAttributeOptions(['pr-price','pr-ctgrs'])
                 ->join('product_categories', 'product_categories.product_id', '=', 'products.id')
-                ->where('product_categories.category_id',$a);
+                ->where('product_categories.category_id',preg_replace('/\D+/', '', $id));
 
             $ctgr = $this->arrayService->makeRelatedCategories($builder);
             $rld_itms = array_unique($ctgr[1]);
@@ -49,17 +104,17 @@ class CategoryController extends Controller implements CategoryInterface
 
             $avg = (min($ctgr[0]) + max($ctgr[0])) * 0.5;
 
-            if ($request->has('br') or $request->has('pr') or $request->o !== "undefined" and $request->o !== null or $request->has('s') or in_array($request->o, ['pr-in', 'pr-de'])) {
+            if ($request->has('br') or $request->has('min') or $request->o !== "undefined" and $request->o !== null or $request->has('s') or in_array($request->o, ['pr-in', 'pr-de'])) {
 
                 if($request->br) {
                     $builder->whereHas('productcategories',function($query) use ($request) {
                         $query->whereIn('category_id',explode(",", $request->br));
                     });
                 }
-                if($request->pr and $request->max) {
+                if($request->min and $request->max) {
                     $builder->join('product_prices', 'product_prices.id', '=', 'products.id')
                         ->where([
-                            ['product_prices.price', '>', $request->pr],
+                            ['product_prices.price', '>', $request->min],
                             ['product_prices.price', '<', $request->max],
                         ]);
                 }
@@ -79,7 +134,10 @@ class CategoryController extends Controller implements CategoryInterface
             $products = $builder->limit(200)->paginate(10);
         }
         if($id == 0) {
-            $query = $request->search;
+            $query = preg_match("/^[a-zа-яA-ZА-ЯёЁ]/u", $request->search);
+            if($query == '' or $query == null) {
+                return response()->json(['status'=>'Введите правильный запрос'],400);
+            }
             $builder = Products::withAttributeOptions(['pr-price','pr-ctgrs'])
                 ->whereHas('attributesoptions',function($q) use ($query) {
                     $q->where([
@@ -91,7 +149,6 @@ class CategoryController extends Controller implements CategoryInterface
                     ]);
                 });
             $ctgr = $this->arrayService->makeRelatedCategories($builder);
-
 
             $avg = (min($ctgr[0]) + max($ctgr[0])) * 0.5;
             if ($request->has('br') or $request->has('pr') or $request->o !== "undefined" and $request->o !== null or $request->has('s') or in_array($request->o, ['pr-in', 'pr-de'])) {
@@ -124,13 +181,13 @@ class CategoryController extends Controller implements CategoryInterface
                 }
             }
 
-            $subbrands = DB::table('brands')->select(['id','name','category_id','categories'])->get();
+            $subbrands = $this->brand->select(['id','name','category_id','categories'])->get();
             $brands = $this->arrayService->makeBrandArray($subbrands,1);
-            $related_items = DB::table('categories')->whereIn('id',array_unique($ctgr[1]))->get();
+            $related_items = $this->category->whereIn('id',array_unique($ctgr[1]))->get();
             $products = $builder->limit(200)->paginate(10);
 
         }
-        return response()->json(['products'=>$products,'related_items'=>$related_items,'brands'=>$brands]);
+        return response()->json(['products'=>$products,'related_items'=>$related_items,'brands'=>$brands],200);
     }
 
 }
