# app/Http/Controllers/API/CurrencyController.php
@@ -6,19 +6,78 @@ use App\Contracts\CurrencyInterface;
 use App\Http\Controllers\Controller;
 use App\Models\Currency;
 use App\Services\Currency\CurrencyRates;
+use Illuminate\Database\Eloquent\ModelNotFoundException;
 use Session;
 
 class CurrencyController extends Controller implements CurrencyInterface
 {
 
-    //Изменение валюты
+    /**
+     * @OA\Get(
+     *      path="/currency/{currencyCode}",
+     *      operationId="changeSessionCurrency",
+     *      tags={"Currency"},
+     *      summary="change session currency",
+     *      description="change session currency",
+     *      @OA\Parameter(
+     *          name="currencyCode",
+     *          description="Currency code",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *       ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Currency not found",
+     *      )
+     *     )
+     */
+
+
     public function changeCurrency(string $currencyCode)
     {
+        try {
+            $currency = Currency::byCode($currencyCode)->firstOrFail();
+        }
+        catch(ModelNotFoundException $exception) {
+            return response()->json(['status'=>'Нет такой'],403);
+        }
         session(['currency' => $currencyCode]);
-        $currency = Currency::byCode($currencyCode)->first();
+        return response()->json(['status'=>'Currency has changed'],200);
     }
+
+
+    /**
+     * @OA\Get(
+     *      path="/currentValues",
+     *      operationId="changeCurrency",
+     *      tags={"Currency"},
+     *      summary="change currency",
+     *      description="change currency",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *       )
+     *     )
+     */
+
+
     public function current() {
         CurrencyRates::getRates();
-        return response()->json(['status'=>'changed']);
+        return response()->json(['status'=>'changed'],200);
     }
 }
